# Exoplanet-Discoveries

./: .gitignore  DETECTION_LIMITS.md  MILESTONE2.md  MILESTONE3.md  MILESTONE4.md  README.md  REPORTING_GUIDE.md  SECURITY.md  STAR_MAP_IMAGEGEN_PROMPT.md  SURVIVOR_VETTING.md  VALIDATION.md  pyproject.toml
.github/: dependabot.yml
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: repair_legacy_common_mode.py
targets/: broader_single_hosts_pool_35.csv  broader_single_hosts_pool_35.json  campaign_broader_unseen.csv  campaign_cool_single_hosts_10.csv  campaign_cool_single_hosts_10.json  campaign_cool_single_hosts_10_v2.csv  campaign_cool_single_hosts_10_v2.json  campaign_cool_single_hosts_next_30.csv  campaign_cool_single_hosts_suffix.csv  cool_single_hosts_pool_40.csv  cool_single_hosts_pool_40.json  cool_single_hosts_pool_60.csv  cool_single_hosts_pool_60.json  pilot_cool_single_hosts.csv  pilot_cool_single_hosts.json  sector100_2min_targets.csv  sector100_expansion_5000.csv  sector100_expansion_5000.json  sector105_2min_targets.csv  sector105_blank_small_8.csv  sector105_blank_small_8.json  sector105_blank_small_next17.csv  sector105_blank_small_next20.csv  sector105_blank_small_next20b.csv  sector105_blank_small_next20b.json  sector105_blank_small_next20c.csv  sector105_blank_small_next20c.json  sector105_blank_small_next20d.csv  sector105_blank_small_next20d.json  sector105_blank_small_pool.csv  sector105_blank_small_pool.json  sector105_blank_small_pool40.csv  sector105_blank_small_pool40.json  (+6 more)
(+31 files in other folders)
